# streaming-companion-core

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  __init__.py  comment.py  llm.py  ngwords.txt  processor.py  prompt.py  pyproject.toml  registry.py  sink.py  test_boundary.py  test_comment.py  test_llm.py  test_registry.py  test_sink.py
.github/workflows/: ci.yml  claude.yml  release.yml
docs/superpowers/plans/: 2026-05-31-settings-ui.md  2026-06-21-operator-console.md  2026-06-28-core-reactive-queue-pump.md  2026-06-28-twitch-plugin-core-logic.md
docs/superpowers/specs/: 2026-05-31-settings-ui-design.md  2026-06-21-console-repo-split-design.md  2026-06-21-operator-console-design.md  2026-06-21-unified-pyside6-console-design.md  2026-06-25-twitch-companion-design.md
scripts/: check_wheel.py
src/companion_core/: __init__.py  chat_handler.py  comment.py  config.py  console_providers.py  llm.py  ngword.py  ngwords.txt  orchestrator.py  persona.py  phrasebook.py  processor.py  prompt.py  pump.py  queue.py  registry.py  request.py  sink.py  supervisor.py  test_pump.py  test_queue.py
src/companion_core/console/: backend.py  playback.py  service.py  state.py
src/companion_core/sinks/: __init__.py  file.py  voicevox.py
src/companion_core/sources/: __init__.py  chat.py  twitch.py
src/companion_settings/: __main__.py  config.py  live_panel.py  registry.py  schema_ui.py  window.py
src/companion_settings/console/: backend.py
src/companion_settings/console/static/: index.html
src/companion_settings/panels/: llm.py  ngword.py  plugins.py  voicevox.py
tests/: test_boundary.py  test_chat_handler.py  test_comment.py  test_config_save.py  test_console_backend.py  test_console_playback.py  test_console_providers.py  test_console_service.py  test_console_state.py  test_core_config.py  test_live_panel.py  test_llm.py  test_ngword.py  test_orchestrator.py  test_packaging.py  test_persona.py  test_phrasebook.py  test_processor.py  test_prompt.py  test_registry.py  test_request.py  test_settings_config.py  test_settings_console.py  test_settings_panels.py  test_settings_plugin_fixture.py  test_settings_registry.py  test_sink.py  test_sinks_file.py  test_sinks_voicevox.py  test_sources_chat.py  test_sources_twitch.py  test_supervisor.py  test_voicevox_panel.py
tests/fixtures/: sample_plugin.py
