[project]
name = "streaming-companion-core"
version = "0.8.1"
description = "汎用実況コンパニオン基盤 (ゲーム非依存)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Akiyuki Takahashi" }]
dependencies = []

[project.optional-dependencies]
ui = ["PySide6>=6.7", "tomli-w>=1.0"]
console = ["tomli-w>=1.0"]
dev = ["pytest>=8"]

[project.scripts]
companion-settings = "companion_settings.__main__:main"
companion-console = "companion_core.console.backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/companion_core", "src/companion_settings"]
# console/static/*.html は src-layout の package 配下なので自動同梱される
# (force-include は二重追加になり wheel build が失敗するため使わない)
artifacts = ["src/companion_core/console/static/*"]
