[project]
name = "streaming-companion-core"
version = "0.10.0"
description = "汎用実況コンパニオン基盤 (ゲーム非依存)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Akiyuki Takahashi" }]
dependencies = []

# config 保存 (tomli-w) は consumer 側で。core lib 自体は stdlib のみ (dependencies=[])。
[project.optional-dependencies]
save = ["tomli-w>=1.0"]
dev = ["pytest>=8"]

# UI (PySide6 console) は別 repo streaming-companion-console へ分離。core は純 lib。

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/companion_core"]
