[project]
name = "streaming-companion-core"
version = "0.10.0"
description = "汎用実況コンパニオン基盤 (ゲーム非依存)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Akiyuki Takahashi" }]
dependencies = []

# config 保存 (tomli-w) は consumer 側で。core lib 自体は stdlib のみ (dependencies=[])。
[project.optional-dependencies]
save = ["tomli-w>=1.0"]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.18",
    "mypy==2.1.0",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# UI (PySide6 console) は別 repo streaming-companion-console へ分離。core は純 lib。

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/companion_core"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = ["E501", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
